# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "sqlite-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.86"                                   # error handling
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"                                # useful iterator extensions
nom = "7.1.3"                                       # for parsing
peg = "0.8.3"                                       # for parsing
regex = "1.10.4"                                    # for parsing
thiserror = "1.0.61"                                # error handling
